# streamlit

./: .dockerignore  .gitignore  README.md  docker-compose.yml  extract.py  ingest.py  llm-judge.py  main.py  pyproject.toml  streamlit_app.py
.streamlit/: config.toml
app/: config.py  main.py  observability.py
app/api/: routes.py  schemas.py
app/services/: rag.py
docker/local/: Dockerfile.qdrant
docker/railway/: Dockerfile.api  Dockerfile.streamlit  README.md  railway.api.json  railway.streamlit.json
